Adopt to JDK22 (#2)