@@ -26,7 +26,7 @@
 
     <groupId>com.yasuenag</groupId>
     <artifactId>cfa</artifactId>
-    <version>0.3.3</version>
+    <version>0.4.0</version>
     <name>CFA</name>
 
     <properties>
@@ -34,8 +34,8 @@
         <imageName>${project.artifactId}-${project.version}</imageName>
         <buildYear>${maven.build.timestamp}</buildYear>
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -56,8 +56,8 @@
                 <configuration>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
-                        <arg>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</arg>
                     </compilerArgs>
+                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
@@ -65,7 +65,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.3</version>
                 <configuration>
-                  <argLine>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</argLine>
+                  <argLine>--enable-preview</argLine>
                   <workingDirectory>${project.build.directory}</workingDirectory>
                 </configuration>
             </plugin>
@@ -92,10 +92,9 @@
                         <addModule>cfa</addModule>
                     </addModules>
                     <addOptions>
-                        <addOption>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</addOption>
+                        <addOption>--enable-preview</addOption>
                     </addOptions>
                     <launcher>${project.artifactId}=cfa/com.yasuenag.cfa.Main</launcher>
-                    <compress>2</compress>
                     <noHeaderFiles>true</noHeaderFiles>
                     <noManPages>true</noManPages>
                 </configuration>
